--- a/src/app/pages/login/login-page.component.html
+++ b/src/app/pages/login/login-page.component.html
@@ -5,7 +5,7 @@
             <div class="col-12 d-flex align-items-center justify-content-center">
                 <div class="card card-inverse gradient-indigo-purple text-center width-400">
                     <div class="card-img overlap">
-                       <img alt="element 06" class="mb-1" src="../../../assets/img/portrait/avatars/avatar-02.png" width="190">
+                       <img alt="element 06" class="mb-1" src="../../../assets/img/logos/talan.png" width="190">
                     </div>
                     <div class="card-body">
                         <div class="card-block">
