--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -3,7 +3,7 @@
   <div class="logo">
     <a [routerLink]="['/full-layout']" class="logo-text">
       <div class="logo-img">
-        <img src="assets/img/logo.png"/>
+        <img src="assets/img/logos/star.png"/>
       </div>
       <span class="text align-middle">TALAN</span>
     </a>
