--- a/src/app/pages/documentation/download/download.component.html
+++ b/src/app/pages/documentation/download/download.component.html
@@ -54,7 +54,6 @@
                                               <thead>
                                               <tr>
                                                 <th translate>Name</th>
-                                                <th>Module</th>
                                                 <th>Operations</th>
                                               </tr>
                                               </thead>
@@ -63,19 +62,18 @@
                                               <tr
                                                 *ngFor="let f of documentsByModuleByUser |filter: search | paginate: { itemsPerPage: 6, currentPage: p}">
                                                 <td>{{f}}</td>
-                                                <td>{{f}}</td>
                                                 <td>
                                                   <a class="success" data-original-title="" title="download"
                                                      (click)="downloadUserFile(f)">
                                                     <i class="ft-download font-medium-3 mr-2"></i>
                                                   </a>
 
-                                                  <div *ngIf="this.roleSession === 'ADMIN ROLE' || this.roleSession === 'FORMATEUR ROLE'">
+                                                  <a *ngIf="this.roleSession === 'ADMIN ROLE' || this.roleSession === 'FORMATEUR ROLE'">
                                                     <a class="danger" data-original-title="" title="delete"
                                                        (click)="deleteUserFile(f)">
                                                       <i class="ft-trash font-medium-3 mr-2"></i>
                                                     </a>
-                                                  </div>
+                                                  </a>
                                                 </td>
                                               </tr>
 
@@ -143,7 +141,7 @@
                                                     <i class="ft-download font-medium-3 mr-2"></i>
                                                   </a>
 
-                                                  <a class="danger" data-original-title="" title="delete"
+                                                  <a *ngIf="this.roleSession === 'ADMIN ROLE' || this.roleSession === 'FORMATEUR ROLE'" class="danger" data-original-title="" title="delete"
                                                      (click)="deleteFile(f)">
                                                     <i class="ft-trash font-medium-3 mr-2"></i>
                                                   </a>
