--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -2,7 +2,7 @@
 <footer>
     <div class="container-fluid">
         <p class="copyright text-center">
-            &copy; {{currentDate | date: 'yyyy'}} <a>PIXINVENT</a>, made with love for a better web
+            &copy; {{currentDate | date: 'yyyy'}} <a translate>Talan Tunisie - Mentions légales</a>
             <!--&copy;  <a>PIXINVENT</a>, made with love for a better web-->
         </p>
     </div>
